Fix icon spacing of event list teaser

--- a/components/02-molecules/visual-elements/teaser/list-teaser/event-list-teaser/_event-list-teaser.scss
+++ b/components/02-molecules/visual-elements/teaser/list-teaser/event-list-teaser/_event-list-teaser.scss
@@ -63,7 +63,7 @@ $event-date-section-height: ($font-size-xs) + (2 * $spacer-xxs);
   font-size: $font-size-sm;
 
   .icon-svg {
-    margin-left: $spacer-xs;
+    margin-left: $spacer-xxs;
   }
 }
 
